--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <li>
           <img src="img/resort3.jpg" />
           <div class="caption center-align">
-            <h2>Your Dream Hodiday At An Affordable Price</h2>
+            <h2>Your Dream Holiday At An Affordable Price</h2>
             <h5 class="light grey-text text-lighten-3 hide-on-small-only">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit.
               Deserunt, nesciunt numquam! Aperiam, natus. Illo, eum!
