--- a/index.html
+++ b/index.html
@@ -314,28 +314,28 @@
         <div class="row">
           <div class="col s12 m3">
             <img
-              src="http://source.unsplash.com/1600x900/?nature"
+              src="img/gallery1.jpg"
               alt=""
               class="materialboxed responsive-img"
             />
           </div>
           <div class="col s12 m3">
             <img
-              src="http://source.unsplash.com/1600x900/?travel"
+              src="img/gallery2.jpg"
               alt=""
               class="materialboxed responsive-img"
             />
           </div>
           <div class="col s12 m3">
             <img
-              src="http://source.unsplash.com/1600x900/?ocean"
+              src="img/gallery3.jpg"
               alt=""
               class="materialboxed responsive-img"
             />
           </div>
           <div class="col s12 m3">
             <img
-              src="http://source.unsplash.com/1600x900/?beach, travel"
+              src="img/gallery4.jpg"
               alt=""
               class="materialboxed responsive-img"
             />
